# polygonum

./: .gitignore  LICENSE  README.md
files/: Open_files.py  TODO.txt  build_project_Win.bat  document.py  generateDoxygen.bat  implementation_details.txt  whole_commit.txt
files/Ubuntu/: 1_build_dependencies_ubuntu  2_build_project_ubuntu  install_vulkansdk
files/others/: exec  git_script
projects/: CMakeLists _Example.txt  CMakeLists.txt  notes.txt
projects/example_1/: CMakeLists.txt  Doxyfile
projects/example_1/resources/: references.txt
projects/example_1/resources/shaders/: Notes.txt
projects/example_1/resources/shaders/GLSL/: basic_f.frag  basic_v.vert
projects/example_1/src/: main.cpp
projects/example_2/: .gitignore  CMakeLists.txt  Doxyfile
projects/example_2/resources/: references.txt
projects/example_2/resources/shaders/: compile_unix.sh  compile_windows.bat
projects/example_2/resources/shaders/GLSL/: box_f.frag  box_v.vert  skybox_f.frag
projects/example_2/src/: main.cpp
projects/example_3/: CMakeLists.txt  Doxyfile
projects/example_3/resources/: references.txt
projects/example_3/resources/shaders/GLSL/: rock_f.frag  rock_v.vert  skybox_f.frag  skybox_v.vert
projects/example_3/src/: main.cpp
projects/polygonum/: CMakeLists.txt  Doxyfile
projects/polygonum/include/: ECSarch.hpp  commons.hpp  environment.hpp  importer.hpp  input.hpp  models.hpp  physics.hpp  renderer.hpp  timer.hpp  toolkit.hpp  ubo.hpp  vertex.hpp
projects/polygonum/include/polygonum/: bindings.hpp  commons.hpp  ecs.hpp  environment.hpp  importer.hpp  input.hpp  models.hpp  physics.hpp  renderer.hpp  shader.hpp  texture.hpp  timer.hpp  toolkit.hpp  ubo.hpp  vertex.hpp
projects/polygonum/shaders/: compile_unix.sh  compile_windows.bat
projects/polygonum/src/: ECSarch.cpp  bindings.cpp  commons.cpp  ecs.cpp  environment.cpp  importer.cpp  input.cpp  main.cpp  models.cpp  physics.cpp  renderer.cpp  shader.cpp  texture.cpp  timer.cpp  toolkit.cpp  ubo.cpp  vertex.cpp
resources/shaders/: forwardPass.frag  forwardPass.vert  fragTools.vert  geometryPass.frag  geometryPass.vert  lightingPass_f.frag  lightingPass_v.vert  postprocessing_f.frag  postprocessing_v.vert  vertexTools.vert
resources/shaders/New folder/: atmosphere_f.frag  atmosphere_v.vert  planetChunk_f.frag  planetChunk_v.vert  seaPlanet_f.frag  seaPlanet_v.vert  skybox_f.frag  skybox_v.vert  sun_f.frag  sun_v.vert
resources/textures/: references.txt
