# cd /home/username/dev/visual/_BUILD
# cmake -G"Unix Makefiles" ..
# cmake -G"Visual Studio 15 2017 Win64" ..
# cmake -G"Visual Studio 15 2017 Win32" ..

IF("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
MESSAGE(FATAL_ERROR "FATAL: In-source builds are not allowed. You should create a separate directory for build files.")
ENDIF()

set(CMAKE_USE_RELATIVE_PATHS ON)
set(CMAKE_SUPPRESS_REGENERATION ON)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

CMAKE_MINIMUM_REQUIRED (VERSION 3.12)
PROJECT (Polygonum)

MESSAGE(STATUS "CMake version: " ${CMAKE_MAJOR_VERSION} "." ${CMAKE_MINOR_VERSION})

SET(PROJ_NAME "polygonum")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${PROJ_NAME})
SET(PROJ_NAME "example_1")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${PROJ_NAME})
SET(PROJ_NAME "example_2")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${PROJ_NAME})
SET(PROJ_NAME "example_3")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${PROJ_NAME})
